--- a/client/src/components/Anunt/Anunt.css
+++ b/client/src/components/Anunt/Anunt.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    align-items: center;
+    align-items: stretch;
     width: 99.9%;
     background-color: #FFFBFE;
     padding: 15px;
@@ -18,14 +18,14 @@
 
 .anunt-imagine img {
     width: 180px;
-    height: auto;
+    height: 240px;
     border-radius: 8px;
 }
 
 .anunt-subcontainer {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     width: 100%;
     padding-left: 15px;
 }
@@ -91,6 +91,7 @@
 
 .anunt-utilizator-data {
     display: flex;
+    margin-top: auto;
     justify-content: space-between;
     font-size: 14px;
     color: #666;
