--- a/client/src/styles/Login.css
+++ b/client/src/styles/Login.css
@@ -1,4 +1,3 @@
-/* Login page styles */
 .login-form-container {
   display: flex;
   justify-content: center;
@@ -41,16 +40,16 @@
   border: none;
   border-radius: 8px;
   cursor: pointer;
-  background-color: #090C08; /* Original background */
+  background-color: #090C08;
   color: white;
   font-size: 1em;
   transition: all 0.3s ease;
 }
 
 .login-form button:hover {
-  background-color: #000000; /* Black background on hover */
-  color: #32CD32; /* Green text on hover */
-  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.4); /* Optional shadow effect */
+  background-color: #000000;
+  color: #32CD32;
+  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.4);
 }
 
 .login-form button:disabled {
